[tool.poetry]
name = "hgchat"
version = "0.1.2"
description = ""
authors = ["0xMRTT <0xMRTT@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
requests-toolbelt = "^1.0.0"


[[tool.poetry.source]]
name = "codeberg"
url = "https://codeberg.org/api/packages/Bavarder/pypi"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
